erDiagram
    USER {
        int id PK
    }
    VIDEO_METADATA {
        int id PK
        int user_id FK
        string file_key
        string thumbnail_key
        int duration
        string resolution
    }
    STORAGE_BUCKET {
        int id PK
        string bucket_name
        string region
    }
    VIDEO_BUCKET_RELATIONSHIP {
        int video_id FK
        int bucket_id FK
    }
    USER ||--o{ VIDEO_METADATA: "uploads"
    VIDEO_METADATA }o--o{ VIDEO_BUCKET_RELATIONSHIP: "linked_to"
    STORAGE_BUCKET ||--o{ VIDEO_BUCKET_RELATIONSHIP: "contains"
